<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loading"
            type="Boolean" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.OtpScreen">

        <include
            android:id="@+id/headerLayout"
            layout="@layout/common_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin"


            android:gravity="center"
            android:singleLine="false"
            android:text="@string/waiting"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"

            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

        <com.example.fitimdiaapp.customviews.OtpEditText
            android:id="@+id/et_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvNotreceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:text="@string/dont"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_otp" />

        <TextView
            android:id="@+id/tvResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/resend"
            android:textColor="@color/primarycolor"
            android:textSize="@dimen/text_size_regular"

            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvNotreceive"
            app:layout_constraintStart_toEndOf="@+id/tvNotreceive" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/submit_button"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotreceive"
            app:layout_constraintVertical_bias="0.19" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{loading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/headerLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>