<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loading"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegistrationScreen">

        <include
            android:id="@+id/headerLayout"
            layout="@layout/common_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

        <TextView
            android:id="@+id/tvFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/firstname"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_user_profile"
            app:layout_constraintTop_toTopOf="@+id/img_user_profile" />

        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="@+id/tvFirst"
            app:layout_constraintTop_toBottomOf="@+id/tvFirst" />

        <View
            android:id="@+id/view"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/etFirstname"
            app:layout_constraintTop_toBottomOf="@+id/etFirstname" />

        <TextView
            android:id="@+id/tvLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lastname"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/etLastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="@+id/tvLast"
            app:layout_constraintTop_toBottomOf="@+id/tvLast" />

        <View
            android:id="@+id/viewLast"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/etLastname"
            app:layout_constraintTop_toBottomOf="@+id/etLastname" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/viewLast">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:text="@string/male"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_small" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup1"
                android:layout_alignLeft="@+id/radioGroup1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/female"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_regular" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radioGroup1"
                android:layout_alignLeft="@+id/radioGroup1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/others"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_regular" />

        </RadioGroup>

        <View
            android:id="@+id/viewGender"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/viewGender" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <View
            android:id="@+id/viewEmail"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

        <View
            android:id="@+id/viewPassword"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/viewPassword" />

        <TextView
            android:id="@+id/tvLocationvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/location"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/viewPassword" />

        <View
            android:id="@+id/viewLOcation"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

        <TextView
            android:id="@+id/tvBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/birthdate"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/viewLOcation" />

        <TextView
            android:id="@+id/tvBirthvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/birthdate"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/tvBirth"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/viewLOcation" />

        <View
            android:id="@+id/viewBirth"
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvBirth" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/submit_button"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/join"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewBirth" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{loading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/headerLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>